# COELHORealTime

./: .gitignore  .gitlab-ci.yml  README.md  TODO.md  docker-compose.yml  k3d.sh  mirror_on_master_cluster.sh  setup.sh  skaffold.yaml  skaffold_.yaml  todo  upload_env_to_gitlab.py  upload_env_to_k3d.sh
apps/fastapi/: Dockerfile.fastapi  app.py  config.py  e_commerce_customer_interactions_river.py  entrypoint.sh  estimated_time_of_arrival_river.py  functions.py  metrics.py  models.py  pyproject.toml  requirements.txt  sales_forecasting_river.py  transaction_fraud_detection_river.py  transaction_fraud_detection_sklearn.py
apps/fastapi/ml_training/: __init__.py
apps/fastapi/ml_training/river/: __init__.py  ecci.py  eta.py  tfd.py
apps/fastapi/ml_training/sklearn/: __init__.py  ecci.py  eta.py  tfd.py
apps/fastapi/routers/: __init__.py
apps/fastapi/routers/v1/: __init__.py  batch.py  incremental.py  sql.py
apps/fastapi/utils/: __init__.py  batch.py  incremental.py  river.py  sklearn.py
apps/kafka-producers/: .dockerignore  Dockerfile.kafka-producers  PRODUCERS_ANALYSIS.md  e_commerce_customer_interactions.py  entrypoint.sh  estimated_time_of_arrival.py  metrics.py  metrics_server.py  pyproject.toml  requirements.txt  sales_forecasting.py  transaction_fraud_detection.py
apps/reflex/: .dockerignore  Dockerfile.reflex  TODO.md  entrypoint.sh  pyproject.toml  requirements.txt  rxconfig.py
apps/reflex/coelho_realtime/: coelho_realtime.py  resources.py  state.py  utils.py
apps/reflex/coelho_realtime/components/: __init__.py  ecci.py  eta.py  shared.py  tfd.py
apps/reflex/coelho_realtime/data/: dropdown_options_ecci.json  dropdown_options_tfd.json  metric_info_ecci.json  metric_info_eta.json  metric_info_tfd.json  yellowbrick_info_ecci.json  yellowbrick_info_eta.json  yellowbrick_info_tfd.json
apps/reflex/coelho_realtime/pages/: __init__.py  counter.py  e_commerce_customer_interactions.py  estimated_time_of_arrival.py  home.py  transaction_fraud_detection.py
apps/reflex/coelho_realtime/pages/ecci/: __init__.py  incremental.py  sql.py
apps/reflex/coelho_realtime/pages/ecci/batch/: __init__.py  metrics.py  prediction.py
apps/reflex/coelho_realtime/pages/eta/: __init__.py  incremental.py  sql.py
apps/reflex/coelho_realtime/pages/eta/batch/: __init__.py  metrics.py  prediction.py
apps/reflex/coelho_realtime/pages/tfd/: __init__.py  incremental.py  sql.py
apps/reflex/coelho_realtime/pages/tfd/batch/: __init__.py  metrics.py  prediction.py
apps/reflex/coelho_realtime/states/: __init__.py  ecci.py  eta.py  shared.py  tfd.py
apps/river/: .dockerignore  Dockerfile.river  app.py  e_commerce_customer_interactions_river.py  entrypoint.sh  estimated_time_of_arrival_river.py  functions.py  pyproject.toml  requirements.txt  sales_forecasting_river.py  transaction_fraud_detection_river.py
apps/sklearn/: Dockerfile.sklearn  app.py  e_commerce_customer_interactions_sklearn.py  entrypoint.sh  estimated_time_of_arrival_sklearn.py  example.json  functions.py  pyproject.toml  requirements.txt  resource_pool.py  transaction_fraud_detection_sklearn.py  visualization_cache.py
argocd_k3d/: application.yaml
data_producer/: Dockerfile.kafka  entrypoint.sh  producer.py  requirements.txt  transaction_fraud_detection.py
diagrams/: coelho_realtime_architecture.d2  generate.sh  main.py  pyproject.toml
docs/: ARGOCD_INTEGRATION_ROADMAP.md  DEPLOYMENT.md  ROADMAP.md  batch_ml_architecture_answer.md  batch_ml_model_recommendations.md  batch_ml_storage_strategy.md  batch_ml_visualization_research.md  connect_gitlab_to_argocd.md  duckdb_dask_ml_recommendations.md  helm_dependencies.md  mathematical_books_for_ml.md  metrics_tab_redesign.md  ml-metrics-dashboard-design.md  resource-pool-yellowbrick-integration.md  river-ml-metrics-baseline.md  secrets_instructions_gitlab.md  secrets_instructions_k3d.md  sveltekit-migration-guide.md  unified_metrics_tab_design.md  visualization_todo.md  yellowbrick-reflex-architecture.md  yellowbrick_overlap_analysis.md
fastapi_app/: Dockerfile.fastapi  app.py  consumer.py  consumer_draft.py  e_commerce_customer_interactions.py  encoder.py  entrypoint.sh  estimated_time_of_arrival.py  estimated_time_of_arrival_river.py  functions.py  requirements.txt  sales_forecasting.py  transaction_fraud_detection.py  transaction_fraud_detection_consumer.py  transaction_fraud_detection_river.py  transaction_fraud_detection_sklearn.ipynb  transaction_fraud_detection_sklearn.py
helm_k3d/: Chart.yaml  values.yaml
kafka_app/: e_commerce_customer_interactions.py  entrypoint.sh  estimated_time_of_arrival.py  transaction_fraud_detection.py
mlflow_app/: Dockerfile.mlflow  entrypoint.sh
notebooks/: 001_river_classification_metrics_kafka.ipynb  002_river_classification_metrics_polars.ipynb  003_river_classification_metrics_investigation.ipynb  004_river_regression_metrics_investigation.ipynb  005_river_regression_metrics_polars.ipynb  006_river_clustering_metrics_investigation.ipynb  008_sklearn_classification_metrics_duckdb_test.ipynb  009_sklearn_duckdb_classification.ipynb  010_sklearn_duckdb_sql_classification.ipynb  011_sklearn_classification_metrics_investigation.ipynb  012_yellowbrick_features_investigation.ipynb  013_yellowbrick_target_investigation.ipynb  014_yellowbrick_classifier_investigation.ipynb  015_yellowbrick_model_selection_investigation.ipynb  016_sklearn_duckdb_sql_regression.ipynb  018_sklearn_duckdb_sql_clustering.ipynb  019_sklearn_duckdb_sql_classification_sklearn_viz.ipynb  020_sklearn_duckdb_sql_regression_sklearn_viz.ipynb  021_sklearn_duckdb_sql_clustering_sklearn_viz.ipynb  explore_river_metrics.py  explore_river_regression_metrics.py  pyproject.toml  test0009.ipynb  test0011.ipynb  test0012.ipynb  test0013.ipynb
scripts/: click_test.py  test-alerting-rules.sh  test-alertmanager-routing.sh  test_delta_lake.py
streamlit_app/: Dockerfile.streamlit  app.py  entrypoint.sh  functions.py  requirements.txt  style.css
tests/: consumer.py  consumer_draft.py  dockerfile_example_draft.txt  example.json  k3d.sh  requirements.txt  (+12 more)
(+226 files in other folders)
