[project]
name = "notebooks"
version = "0.1.0"
description = "Jupyter Notebooks - COELHO RealTime"
requires-python = ">=3.13,<3.14"
dependencies = [
    "river",
    "kafka-python>=2.0.2",
    "typing-extensions",
    "polars",
    "deltalake",
    "python-dotenv",
    "pandas",
    "pyarrow",
    "orjson",
    "tqdm",
    "duckdb",
    "numpy",
    "catboost",
    "ipywidgets",
    "scikit-learn",
    "imbalanced-learn",
    "yellowbrick",
    #Setuptools is necessary to YellowBrick
    "setuptools",
    "xgboost",
    "mlflow",
]

[dependency-groups]
dev = []
