[project]
name = "notebooks"
version = "0.1.0"
description = "Jupyter Notebooks - COELHO RealTime"
requires-python = ">=3.13,<3.14"
dependencies = [
    "river",
    "kafka-python>=2.0.2",
    "typing-extensions",
    "polars",
    "deltalake",
    "python-dotenv",
    "pandas",
    "pyarrow",
    "orjson",
    "tqdm",
    "duckdb",
    "numpy",
    "catboost",
    "ipywidgets",
    "scikit-learn",
    "imbalanced-learn",
    "yellowbrick",
    #Setuptools is necessary to YellowBrick
    "setuptools",
    "xgboost",
    "mlflow",
    "lightgbm",
    "hdbscan",
    # umap-learn requires numba/llvmlite - specify versions for Python 3.13 compatibility
    "umap-learn>=0.5.7",
    "numba>=0.60.0",
    "llvmlite>=0.43.0",
    "ipykernel>=7.1.0",
    "nltk>=3.9.2",
]

[dependency-groups]
dev = []
