[project]
name = "reflex-frontend"
version = "0.1.0"
description = "Reflex Frontend - Real-time ML Dashboard with interactive visualizations"
requires-python = ">=3.13"
dependencies = [
    "reflex",
    "fastapi",
    "websockets",
    "plotly",
    "folium",
    "prometheus-fastapi-instrumentator",
    "orjson",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
