[project]
name = "river-service"
version = "0.1.0"
description = "River ML Training Service - Incremental machine learning with real-time Kafka streaming"
requires-python = ">=3.13"
dependencies = [
    # HTTP API
    "fastapi",
    "uvicorn",
    "prometheus-fastapi-instrumentator",
    "pydantic",
    "starlette",
    # ML Training
    "pandas",
    "numpy",
    "mlflow",
    "kafka-python",
    "river",
    "boto3",
    "pyarrow",
    # Delta Lake / Polars (lightweight, lazy evaluation, no JVM)
    "polars",
    "deltalake",
    # Redis (live model caching for real-time predictions)
    "redis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
