[project]
name = "sklearn-service"
version = "0.1.0"
description = "Scikit-Learn Batch ML Service - Batch machine learning with CatBoost and YellowBrick visualizations"
requires-python = ">=3.13"
dependencies = [
    # HTTP API & CLI
    "fastapi",
    "uvicorn",
    "pydantic",
    "prometheus-fastapi-instrumentator",
    "starlette",
    "click",
    "requests",
    # Data processing
    "pandas",
    "numpy",
    "pyarrow",
    "duckdb",
    "deltalake",
    "orjson",
    # ML & Visualization
    "mlflow",
    "scikit-learn",
    "catboost",
    "imbalanced-learn",
    # TODO: Once PR #1319 is merged, replace yellowbrick line with:
    # "yellowbrick>=1.6",  # or install from git: git+https://github.com/DistrictDataLabs/yellowbrick@refs/pull/1319/head
    # and remove setuptools (no longer needed for distutils shim)
    # PR: https://github.com/DistrictDataLabs/yellowbrick/pull/1319
    "yellowbrick",
    "matplotlib",
    "boto3",
    "setuptools",  # Provides distutils compatibility for yellowbrick on Python 3.13 (LooseVersion)
    # UMAP visualization (requires numba/llvmlite - specify versions for Python 3.13 compatibility)
    "umap-learn>=0.5.7",
    "numba>=0.60.0",
    "llvmlite>=0.43.0",
    # Text analysis (NLTK for PosTagVisualizer)
    "nltk>=3.9.2",
    # Caching
    "redis",  # YellowBrick visualization caching
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
